--- a/style.css
+++ b/style.css
@@ -159,10 +159,7 @@ footer > button {
   text-transform: uppercase;
   cursor: pointer;
 }
-.grid-container2 {
-  margin-top: 100px;
-  display: none;
-}
+
 @media screen and (max-width: 921px) {
   .grid-container {
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -173,15 +170,9 @@ footer > button {
   }
   .grid-container > .student {
     grid-column: 1;
-    height: 16em;
+    height: 18em;
   }
-  .grid-container > .alumni {
-    height: fit-content;
-    border-radius: 0 0 0 0px;
-  }
-  .grid-container > .time {
-    height: fit-content;
-  }
+
   .grid-container > footer {
     grid-column: 1/3;
     padding: 1em;
@@ -189,6 +180,9 @@ footer > button {
   }
 }
 @media screen and (max-width: 765px) {
+  .grid-container {
+    grid-template-columns: 1fr 1fr;
+  }
   .grid-container > header > h1 {
     text-align: center;
   }
@@ -198,9 +192,7 @@ footer > button {
   .grid-container > .time {
     height: 16em;
   }
-  .grid-container > .school {
-    height: 18em;
-  }
+
   .grid-container > .alumni {
     height: 16em;
     border-radius: none;
@@ -214,6 +206,7 @@ footer > button {
   div.grid-container {
     grid-template-columns: 100%;
     grid-template-rows: repeat(7, minmax(var(--rtc-cell-l), 1fr));
+    column-gap: 0px;
   }
   main {
     grid-row: 4;
@@ -242,7 +235,7 @@ footer > button {
 }
 @media screen and (max-width: 490px) {
   div.grid-container {
-    grid-template-rows: 600px repeat(5, 2fr) 500px;
+    grid-template-rows: 600px repeat(5, minmax(300px, 1.2fr)) 500px;
     grid-template-columns: 100%;
   }
   .grid-container > .time,
@@ -250,7 +243,6 @@ footer > button {
   .grid-container > .student,
   .grid-container > .alumni {
     height: 100%;
-    width: 100%;
   }
   .grid-container > .time {
     background-position: 50% 60%;
@@ -270,11 +262,14 @@ footer > button {
 
   @media screen and (max-width: 325px) {
     div.grid-container {
-      grid-template-rows: 1fr repeat(5, 0.5fr) 1fr;
+      grid-template-rows: 1fr repeat(5, 0.4fr) 1fr;
       height: 100%;
     }
   }
   @media screen and (max-width: 307px) {
+    div.grid-container {
+      min-width: 280px;
+    }
     div.grid-container > header {
       height: 100%;
     }
@@ -289,12 +284,8 @@ footer > button {
       text-align: center;
       font-size: var(--rtc-font-parragraf-mobile);
     }
-    .grid-container > .time,
-    .grid-container > .school,
-    .grid-container > .student,
     .grid-container > .alumni {
-      width: 200px;
-      height: 100%;
+      background-position-x: 20%;
     }
   }
 
